Fix overflow

--- a/src/layouts/Learn/Learn.css
+++ b/src/layouts/Learn/Learn.css
@@ -50,6 +50,7 @@
 .contentWrapper {
   width: 100%;
   padding: 20px;
+  overflow: auto;
 }
 
 .title {
